--- a/planetary_diversity/localisation/german/planetarydiversity_l_german.yml
+++ b/planetary_diversity/localisation/german/planetarydiversity_l_german.yml
@@ -4687,8 +4687,8 @@ snowball_earth.11.name:0 "Das erste Tauwetter"
  decision_shroud_crucible_desc:0 "By introducing Zro to the furnace system we should be able to improve the planet's efficiency, although we will need a source of Zro to keep it running well."
  decision_clean_crucible_tooltip:0 "The old Zro residue will be removed from this world."
  decision_shroud_crucible_tooltip:0 "Zro will be re-introduced into the furnace system of this world."
- pd_crucible_nearby_init_NAME:0 "Crucible Neighbour"
- pd_crucible_nearby_init_DESC:0 "One of your neighbour systems will have the unique planet The Crucible, it will not spawn again in the game."
+ pd_crucible_nearby_init_NAME:0 "Crucible Neighbor"
+ pd_crucible_nearby_init_DESC:0 "One of your Neighbor systems will have the unique planet The Crucible, it will not spawn again in the game."
  tech_crucible_upgrade_custom:0 "Crucible Upgrade"
  tech_crucible_upgrade_custom_desc:0 "Further study of the Crucible has shown that it was designed to be infused with Zro, which was the cause of the residue on the planet. We should be able to either remove the current residue or infuse it with Zro once again."
  origin_crucible_world:0 "From The Ashes of the Rusnads"
@@ -5302,7 +5302,7 @@ snowball_earth.11.name:0 "Das erste Tauwetter"
  building_pd_tectonic_drills_2:0 "Tectonic Drill - Final Stage"
  building_pd_tectonic_drills_2_desc:0 "Terraforms the planet into a §YAsh World§! on completion."
  pdexotic.10.name:0 "Ash Perfection"
- pdexotic.10.desc:0 "Through years of hard labour, our tectonic drilling project on §Y[Root.GetName]§! has come to fruition.\n\nFrom this day, §Y[Root.GetName]§! will be considered a true home for our species."
+ pdexotic.10.desc:0 "Through years of hard labor, our tectonic drilling project on §Y[Root.GetName]§! has come to fruition.\n\nFrom this day, §Y[Root.GetName]§! will be considered a true home for our species."
  pdexotic.10.a:0 "A volcanic paradise for us."
  decision_pd_tectonic_drilling_planetside:0 "Tectonic Fissuring"
  decision_pd_tectonic_drilling_planetside_desc:0 "This initial tectonic cracking will release the gasses needed for us to colonize this world and then build deeper mining equipment to release the planet's magma."
@@ -5754,7 +5754,7 @@ snowball_earth.11.name:0 "Das erste Tauwetter"
  building_geothermal_lab:0 "Geothermal Engineering Department"
  building_geothermal_lab_desc:0 "The highly active geothermal activity and extreme differences in temperature means that engineers have to employ unique solutions to normal engineering problems."
  building_coral_resort:0 "Coral Forests Planetary Resort"
- building_coral_resort_desc:0 "The dry climate and colour coral forests make for some spectacular vacation destinations."
+ building_coral_resort_desc:0 "The dry climate and color coral forests make for some spectacular vacation destinations."
  building_coral_lab:0 "Coral Forest Research Posts"
  building_coral_lab_desc:0 "The unique land coral holds many secrets for biologists and engineerings alike."
  building_coral_guild:0 "Coral Artisans Guild"
@@ -6477,6 +6477,29 @@ snowball_earth.11.name:0 "Das erste Tauwetter"
  decision_unflood_ringworld:0 "Unflood Ringworld"
  decision_unflood_ringworld_desc:0 "This ringworld could be ideal for us - if only there wasn't so much water. While costly, we can drain much of the excess water into space."
  decision_unflood_ringworld_tooltip:0 "By draining the water, this ringworld will once again be ideal for races who reside above sea level."
+
+ ### April Update Cyberx Warform Unique World
+ pc_pd_orange_warform:0 "Warform KB-14"
+ pc_pd_orange_warform_desc:0 "Warform kill you" #TODO
+ pc_pd_orange_warform_adj:0 "cyber"
+ mod_pc_pd_orange_warform_habitability:0 "Warform KB-14 Habitability"
+ trait_pc_pd_orange_warform_preference:0 "Warform KB-14 Preference"
+ trait_pc_pd_orange_warform_preference_desc:0 "$trait_pc_arctic_preference_desc$"
+ pc_pd_red_warform:0 "Warform KB-14"
+ pc_pd_red_warform_desc:0 "Warform kill you" #TODO
+ pc_pd_red_warform_adj:0 "cyber"
+ mod_pc_pd_red_warform_habitability:0 "Warform KB-14 Habitability"
+ trait_pc_pd_red_warform_preference:0 "Warform KB-14 Preference"
+ trait_pc_pd_red_warform_preference_desc:0 "$trait_pc_arctic_preference_desc$"
+ pc_pd_blue_warform:0 "Warform KB-14"
+ pc_pd_blue_warform_desc:0 "Warform kill you" #TODO
+ pc_pd_blue_warform_adj:0 "cyber"
+ mod_pc_pd_blue_warform_habitability:0 "Warform KB-14 Habitability"
+ trait_pc_pd_blue_warform_preference:0 "Warform KB-14 Preference"
+ trait_pc_pd_blue_warform_preference_desc:0 "$trait_pc_arctic_preference_desc$"
+
+ #Odds & Ends
+ TRAIT_DRY_SUPERHAB_PREFERENCE_EFFECT:0 "Dry Superhabitable Habitability:$pd80$\n$DRY_PREFERENCE_EFFECT$"" 
 
  
 
