--- a/planetary_diversity/localisation/polish/planetarydiversity_l_polish.yml
+++ b/planetary_diversity/localisation/polish/planetarydiversity_l_polish.yml
@@ -1024,15 +1024,15 @@
  mod_job_synth_assembler_per_pop_short:0 "\n§G+1§! £mod_job_synth_assembler_add£ per $VALUE$ £pop£"
 
  #Nearby Unique
- pd_floating_nearby_init_NAME:0 "Floating Neighbour"
+ pd_floating_nearby_init_NAME:0 "Floating Neighbor"
  pd_floating_nearby_init_DESC:0 "Jeden z sąsiednych układów będzie posiadał unikalny wiszący świat, który nie pojawi się więcej w grze."
- pd_crystal_nearby_init_NAME:0 "Crystal Neighbour"
+ pd_crystal_nearby_init_NAME:0 "Crystal Neighbor"
  pd_crystal_nearby_init_DESC:0 "Jeden z sąsiednych układów będzie posiadał unikalny kryształowy świat, który nie pojawi się więcej w grze."
- pd_graveyard_nearby_init_NAME:0 "Graveyard Neighbour"
+ pd_graveyard_nearby_init_NAME:0 "Graveyard Neighbor"
  pd_graveyard_nearby_init_DESC:0 "Jeden z sąsiednych układów będzie posiadał unikalne cmentarzysko tiyanek, który nie pojawi się więcej w grze."
- pd_technoorganic_nearby_init_NAME:0 "Techno-Organic Neighbour"
+ pd_technoorganic_nearby_init_NAME:0 "Techno-Organic Neighbor"
  pd_technoorganic_nearby_init_DESC:0 "Jeden z sąsiednych układów będzie posiadał unikalny technoorganiczny świat, który nie pojawi się więcej w grze."
- pd_archive_nearby_init_NAME:0 "Archive Neighbour"
+ pd_archive_nearby_init_NAME:0 "Archive Neighbor"
  pd_archive_nearby_init_DESC:0 "Jeden z sąsiednych układów będzie posiadał unikalne Archiwum, który nie pojawi się więcej w grze."
 
  #Megacorps Unique Starts
@@ -1243,7 +1243,7 @@
  d_pdsandworms:0 "Czerwie pustyni"
  d_pdsandworms_desc:0 "Colossal worm-like creatures that live in the dunes of this world. They attack people and machinery in their territory."
  pddune.10.name:0 "W tych piaskach coś się porusza"
- pddune.10.desc:0 "Our colonial scouts on [Root.GetName] have stumbled upon something extraordinary in the southern dune sea. Finding some odd coloured dunes they did some testing that tested positive for Zro. Further scouting suggests more deposits in the dunes, once the infrastructure is built we could begin mining operations."
+ pddune.10.desc:0 "Our colonial scouts on [Root.GetName] have stumbled upon something extraordinary in the southern dune sea. Finding some odd colored dunes they did some testing that tested positive for Zro. Further scouting suggests more deposits in the dunes, once the infrastructure is built we could begin mining operations."
  pddune.10.a:0 "Ten, kto kontroluje zro, kontroluje wszechświat."
  pddune.20.name:0 "Wormsign"
  pddune.20.desc:0 "A report has come in from [Root.GetName] that a colossal worm-like creature emerged from the sands and destroyed a Zro harvester, with only a few of the crew making it out alive. Our Xenobiologists believe that these creatures may be from a different dimension. They believe that killing them would have a negative effect on our Zro production. The worms pose a considerable risk to the colony and much of the planet will have to be left unusable to accommodate them."
@@ -1898,7 +1898,7 @@
  pdcomposer:0 "Composed"
  pdcomposer_desc:0 "While birth rates are consistent with our species, the unexplained longevity on this planet means people live longer, more productive lives."
  pdshroud.23.name:0 "Pull the Strand"
- pdshroud.23.desc:0 "The hidden chamber in the §YTemples of Strands§! is open and inside is a thick web of different colour ropes coming out from every wall, the floor and ceiling. We think it might be some kind of puzzle, or perhaps a trap. How should we continue?"
+ pdshroud.23.desc:0 "The hidden chamber in the §YTemples of Strands§! is open and inside is a thick web of different color ropes coming out from every wall, the floor and ceiling. We think it might be some kind of puzzle, or perhaps a trap. How should we continue?"
  pdshroud.23.a:0 "Pull the Red rope."
  pdshroud.23.b:0 "Pull the Green rope."
  pdshroud.23.c:0 "Pull the Orange rope."
@@ -2178,7 +2178,7 @@
  pdhabitat_sol_system_initializer_NAME:0 "Planetary Habitat Sol"
  pdhabitat_sol_system_initializer_DESC:0 "Sol start system with several Planetary Habitats."
  origin_pd_hive: "Infecting Planetary Hive"
- origin_pd_hive_desc:0 "This civilization's homeworld begins as an Hive World, a world shaped in the image of the hive. This has become part of the hive's exsistance and it will do this to all worlds it lands on."
+ origin_pd_hive_desc:0 "This civilization's homeworld begins as a hive World, a world shaped in the image of the hive. This has become part of the hive's exsistance and it will do this to all worlds it lands on."
  origin_tooltip_pd_hive_start_effects:0 "The hive has long turned it's homeworld into an extension of itself. Once it arrives on a any new world it will slowly infect with the hive, suffering penalties until the process is complete. \n\n§RWARNING: All planet classes are slowly transformed to §Y$pc_pdhive2$s§!" 
  origin_pd_shroud: "Shroud-Touched"
  origin_pd_shroud_desc:0 "This cywilizacja has evolved in a world at the edge of reality and a realm of psionic energy. Living at this weak point between the two worlds has granted an understanding of psionic theory."
@@ -2200,8 +2200,8 @@
  pdtechnoorganic.47.hive.desc:0 "All the machine said in its defense was 'I understand' and put up no fight against the drones sent to shut it down. The synth animals all slowly powered down and became inert. We are studying the remains and we have recycled the bodies of the synth animals."
 
  #Eco-City Nearby
- pd_eco_nearby_init_NAME:0 "Eco-City Neighbour"
- pd_eco_nearby_init_DESC:0 "One of your neighbour systems will have an abandoned Eco-Arcology, który nie pojawi się więcej w grze."
+ pd_eco_nearby_init_NAME:0 "Eco-City Neighbor"
+ pd_eco_nearby_init_DESC:0 "One of your Neighbor systems will have an abandoned Eco-Arcology, który nie pojawi się więcej w grze."
 
  ###Wet Swamp
  pc_wetswamp:0 "Świat moczarowy"
@@ -4281,7 +4281,7 @@
  decision_snowball_wasteland_3:0 "Nanite-Enhanced Soil Reclamation"
  decision_snowball_wasteland_3_desc:0 "By introducing microscopic soil enhanced with nanites it would allow us to conduct farming operations in otherwise inhospitable regions of the planet."
 snowball_earth.11.name:0 "The First Thaw"
- snowball_earth.11.desc:0 "We have completed the first step of the long restoration process, and the fruits of our labours are already beginning to show. Surface temperatures are beginning to steadily rise, with average temperatures projected to increase by several degrees. The next step will be to reinvigorate the planet's tectonic and geothermal activity, once we've developed the appropriate technology."
+ snowball_earth.11.desc:0 "We have completed the first step of the long restoration process, and the fruits of our labors are already beginning to show. Surface temperatures are beginning to steadily rise, with average temperatures projected to increase by several degrees. The next step will be to reinvigorate the planet's tectonic and geothermal activity, once we've developed the appropriate technology."
  snowball_earth.12.name:0 "Lifeblood of the Planet"
  snowball_earth.12.desc:0 "Stage two of our homeworld's restoration project has successfully concluded. With the resonators complete, we are now able to energize and control the seismic activity of our planet. For the first time in memory, our people have woken up to a gentle heat and the sound of rolling waves. While most of the planet is still frozen, the equator is now free of ice and once again livable. The next and final stage will be to restore the planet's soil nutrients back to pre-Ice-Age levels."
  snowball_earth.13.name:0 "Paradise Found"
@@ -4521,7 +4521,7 @@ snowball_earth.11.name:0 "The First Thaw"
  decision_shroud_crucible_desc:0 "By introducing Zro to the furnace system we should be able to improve the planet's efficiency, although we will need a source of Zro to keep it running well."
  decision_clean_crucible_tooltip:0 "The old Zro residue will be removed from this world."
  decision_shroud_crucible_tooltip:0 "Zro will be re-introduced into the furnace system of this world."
- pd_crucible_nearby_init_NAME:0 "Crucible Neighbour"
+ pd_crucible_nearby_init_NAME:0 "Crucible Neighbor"
  pd_crucible_nearby_init_DESC:0 "Jeden z sąsiednych układów będzie posiadał unikalny planet Tygiel, który nie pojawi się więcej w grze."
  tech_crucible_upgrade_custom:0 "Crucible Upgrade"
  tech_crucible_upgrade_custom_desc:0 "Further study of the Crucible has shown that it was designed to be infused with Zro, which was the cause of the residue on the planet. We should be able to either remove the current residue or infuse it with Zro once again."
@@ -5230,7 +5230,7 @@ snowball_earth.11.name:0 "The First Thaw"
  building_pd_tectonic_drills_2:0 "Tectonic Drill - Final Stage"
  building_pd_tectonic_drills_2_desc:0 "Terraforms the planet into a §YAsh World§! on completion."
  pdexotic.10.name:0 "Ash Perfection"
- pdexotic.10.desc:0 "Through years of hard labour, our tectonic drilling project on §Y[Root.GetName]§! has come to fruition.\n\nFrom this day, §Y[Root.GetName]§! will be considered a true home for our species."
+ pdexotic.10.desc:0 "Through years of hard labor, our tectonic drilling project on §Y[Root.GetName]§! has come to fruition.\n\nFrom this day, §Y[Root.GetName]§! will be considered a true home for our species."
  pdexotic.10.a:0 "A volcanic paradise for us."
  decision_pd_tectonic_drilling_planetside:0 "Tectonic Fissuring"
  decision_pd_tectonic_drilling_planetside_desc:0 "This initial tectonic cracking will release the gasses needed for us to colonize this world and then build deeper mining equipment to release the planet's magma."
@@ -5878,7 +5878,7 @@ snowball_earth.11.name:0 "The First Thaw"
  building_geothermal_lab:0 "Geothermal Engineering Department"
  building_geothermal_lab_desc:0 "The highly active geothermal activity and extreme differences in temperature means that engineers have to employ unique solutions to normal engineering problems."
  building_coral_resort:0 "Coral Forests Planetary Resort"
- building_coral_resort_desc:0 "The dry climate and colour coral forests make for some spectacular vacation destinations."
+ building_coral_resort_desc:0 "The dry climate and color coral forests make for some spectacular vacation destinations."
  building_coral_lab:0 "Coral Forest Research Posts"
  building_coral_lab_desc:0 "The unique land coral holds many secrets for biologists and engineerings alike."
  building_coral_guild:0 "Coral Artisans Guild"
@@ -6601,6 +6601,29 @@ snowball_earth.11.name:0 "The First Thaw"
  decision_unflood_ringworld:0 "Unflood Ringworld"
  decision_unflood_ringworld_desc:0 "This ringworld could be ideal for us - if only there wasn't so much water. While costly, we can drain much of the excess water into space."
  decision_unflood_ringworld_tooltip:0 "By draining the water, this ringworld will once again be ideal for races who reside above sea level."
+
+ ### April Update Cyberx Warform Unique World
+ pc_pd_orange_warform:0 "Warform KB-14"
+ pc_pd_orange_warform_desc:0 "Warform kill you" #TODO
+ pc_pd_orange_warform_adj:0 "cyber"
+ mod_pc_pd_orange_warform_habitability:0 "Warform KB-14 Habitability"
+ trait_pc_pd_orange_warform_preference:0 "Warform KB-14 Preference"
+ trait_pc_pd_orange_warform_preference_desc:0 "$trait_pc_arctic_preference_desc$"
+ pc_pd_red_warform:0 "Warform KB-14"
+ pc_pd_red_warform_desc:0 "Warform kill you" #TODO
+ pc_pd_red_warform_adj:0 "cyber"
+ mod_pc_pd_red_warform_habitability:0 "Warform KB-14 Habitability"
+ trait_pc_pd_red_warform_preference:0 "Warform KB-14 Preference"
+ trait_pc_pd_red_warform_preference_desc:0 "$trait_pc_arctic_preference_desc$"
+ pc_pd_blue_warform:0 "Warform KB-14"
+ pc_pd_blue_warform_desc:0 "Warform kill you" #TODO
+ pc_pd_blue_warform_adj:0 "cyber"
+ mod_pc_pd_blue_warform_habitability:0 "Warform KB-14 Habitability"
+ trait_pc_pd_blue_warform_preference:0 "Warform KB-14 Preference"
+ trait_pc_pd_blue_warform_preference_desc:0 "$trait_pc_arctic_preference_desc$"
+
+ #Odds & Ends
+ TRAIT_DRY_SUPERHAB_PREFERENCE_EFFECT:0 "Dry Superhabitable Habitability:$pd80$\n$DRY_PREFERENCE_EFFECT$"" 
 
  
 
