--- a/planetary_diversity/localisation/simp_chinese/planetarydiversity_l_simp_chinese.yml
+++ b/planetary_diversity/localisation/simp_chinese/planetarydiversity_l_simp_chinese.yml
@@ -98,15 +98,15 @@
  trait_pc_steppe_preference:0 "温凉草地偏好"
  trait_pc_steppe_preference_desc:1 "$trait_pc_arctic_preference_desc$"
  mod_pc_steppe_habitability:1 "温凉草地宜居性"
- pc_frozen_desert:0 "冷沙漠星球"
+ pc_frozen_desert:0 "寒漠星球"
  pc_frozen_desert_desc:0 "拥有氮氧大气层的严寒岩石星球。降水量低，地表上的显著水体很少。即使在白天，其平均气温也经常处于冰点以下。"
- pc_frozen_desert_tile:0 "冷沙漠地形"
+ pc_frozen_desert_tile:0 "寒漠地形"
  pc_frozen_desert_tile_desc:0 "寒冷、干旱的沙丘，植被稀少。"
- trait_pc_frozen_desert_preference:0 "冷沙漠偏好"
+ trait_pc_frozen_desert_preference:0 "寒漠偏好"
  trait_pc_frozen_desert_preference_desc:1 "$trait_pc_arctic_preference_desc$"
- pc_frozen_desert_habitability:1 "冷沙漠星球宜居性"
+ pc_frozen_desert_habitability:1 "寒漠星球宜居性"
  START_SCREEN_PART_ONE_FROZENDESERT:0 "自从[GetHomeWorldName]的巨大冰封沙海中形成了第一个原始[GetSpeciesName]社区以来的亿万年里，我们的文明已经传播和繁荣起来。"
- mod_pc_frozen_desert_habitability:1 "冷沙漠星球宜居性"
+ mod_pc_frozen_desert_habitability:1 "寒漠星球宜居性"
  pc_mesa:0 "台地星球"
  pc_mesa_desc:0 "炎热，干燥，拥有氮氧大气层的岩石星球。大型高原和台地在赤道附近很常见，极地则是较凉爽的森林地带。水圈主要存在于大河之中——这些河流切割出峡谷，其河床被植被覆盖。"
  pc_mesa_tile:0 "台地地形"
@@ -777,10 +777,10 @@
  TRAIT_ATACAMA_PREFERENCE_EFFECT:0 "雾漠星球宜居性：$pd80$\n干旱星球宜居性：$pd80$\n台地星球宜居性：$pd80$\n地中海星球宜居性：$pd80$\n恶地星球宜居性：$pd80$\n$DRY_PREFERENCE_EFFECT$"
  TRAIT_SAVANNAH_PREFERENCE_EFFECT:0 "草原宜居性：$pd80$\n温凉草地宜居性：$pd80$\n温和草地宜居性：$pd80$\n莽原宜居性：$pd80$\n半干燥宜居性：$pd80$\n$DRY_PREFERENCE_EFFECT$"
  TRAIT_STEPPE_PREFERENCE_EFFECT:0 "温凉草地星球宜居性：$pd80$\n草原星球宜居性：$pd80$\n温和草地星球宜居性：$pd80$\n莽原星球宜居性：$pd80$\n半干燥星球宜居性：$pd80$\n$DRY_PREFERENCE_EFFECT$"
- TRAIT_ARCTIC_PREFERENCE_EFFECT:0 "极地星球宜居性：$pd80$\n冷沙漠星球宜居性：$pd80$\n冰河星球宜居性：$pd80$\n冰原星球宜居性：$pd80$\n风蚀星球宜居性：$pd80$\n$COLD_PREFERENCE_EFFECT$"
- TRAIT_FRIGID_PREFERENCE_EFFECT:0 "冷沙漠星球宜居性：$pd80$\n极地星球宜居性：$pd80$\n冰河星球宜居性：$pd80$\n冰原星球宜居性：$pd80$\n风蚀星球宜居性：$pd80$\n$COLD_PREFERENCE_EFFECT$"
- TRAIT_GLACIAL_PREFERENCE_EFFECT:0 "冰河星球宜居性：$pd80$\n极地星球宜居性：$pd80$\n冷沙漠星球宜居性：$pd80$\n冰原星球宜居性：$pd80$\n风蚀星球宜居性：$pd80$\n$COLD_PREFERENCE_EFFECT$"
- TRAIT_ANTARCTIC_PREFERENCE_EFFECT:0 "冰原星球宜居性：$pd80$\n极地星球宜居性：$pd80$\n冷沙漠星球宜居性：$pd80$\n冰河星球宜居性：$pd80$\n风蚀星球宜居性：$pd80$\n$COLD_PREFERENCE_EFFECT$"
+ TRAIT_ARCTIC_PREFERENCE_EFFECT:0 "极地星球宜居性：$pd80$\n寒漠星球宜居性：$pd80$\n冰河星球宜居性：$pd80$\n冰原星球宜居性：$pd80$\n风蚀星球宜居性：$pd80$\n$COLD_PREFERENCE_EFFECT$"
+ TRAIT_FRIGID_PREFERENCE_EFFECT:0 "寒漠星球宜居性：$pd80$\n极地星球宜居性：$pd80$\n冰河星球宜居性：$pd80$\n冰原星球宜居性：$pd80$\n风蚀星球宜居性：$pd80$\n$COLD_PREFERENCE_EFFECT$"
+ TRAIT_GLACIAL_PREFERENCE_EFFECT:0 "冰河星球宜居性：$pd80$\n极地星球宜居性：$pd80$\n寒漠星球宜居性：$pd80$\n冰原星球宜居性：$pd80$\n风蚀星球宜居性：$pd80$\n$COLD_PREFERENCE_EFFECT$"
+ TRAIT_ANTARCTIC_PREFERENCE_EFFECT:0 "冰原星球宜居性：$pd80$\n极地星球宜居性：$pd80$\n寒漠星球宜居性：$pd80$\n冰河星球宜居性：$pd80$\n风蚀星球宜居性：$pd80$\n$COLD_PREFERENCE_EFFECT$"
  TRAIT_TUNDRA_PREFERENCE_EFFECT:0 "苔原星球宜居性：$pd80$\n炭沼星球宜居性：$pd80$\n菌丝星球宜居性：$pd80$\n玄武岩星球宜居性：$pd80$\n泥地星球宜居性：$pd80$\n$COLD_PREFERENCE_EFFECT$"
  TRAIT_BOG_PREFERENCE_EFFECT:0 "炭沼星球宜居性：$pd80$\n苔原星球宜居性：$pd80$\n菌丝星球宜居性：$pd80$\n泥地星球宜居性：$pd80$\n玄武岩星球宜居性：$pd80$\n$COLD_PREFERENCE_EFFECT$"
  TRAIT_MUSHROOM_PREFERENCE_EFFECT:0 "菌丝星球宜居性：$pd80$\n苔原星球宜居性：$pd80$\n炭沼星球宜居性：$pd80$\n泥地星球宜居性：$pd80$\n玄武岩星球宜居性：$pd80$\n$COLD_PREFERENCE_EFFECT$"
@@ -1228,7 +1228,7 @@
  TRAIT_TUNDRA_PREFERENCE_EFFECT_RW:0 "苔原宜居性：$pd80$"
  TRAIT_ALPINE_PREFERENCE_EFFECT_RW:0 "高山宜居性：$pd80$"
  TRAIT_BOG_PREFERENCE_EFFECT_RW:0 "炭沼宜居性：$pd80$"
- TRAIT_FRIGID_PREFERENCE_EFFECT_RW:0 "冷沙漠宜居性：$pd80$"
+ TRAIT_FRIGID_PREFERENCE_EFFECT_RW:0 "寒漠宜居性：$pd80$"
  TRAIT_GLACIAL_PREFERENCE_EFFECT_RW:0 "冰河宜居性：$pd80$"
  TRAIT_BOREAL_PREFERENCE_EFFECT_RW:0 "寒温宜居性：$pd80$"
  TRAIT_MUSHROOM_PREFERENCE_EFFECT_RW:0 "菌丝宜居性：$pd80$"
@@ -3354,7 +3354,7 @@
  pc_mesa_adj:0 "台地"
  pc_hadesert_adj:0 "雾霭荒漠"
  pc_outback_adj:0 "荒漠"
- pc_frozen_desert_adj:0 "冷沙漠"
+ pc_frozen_desert_adj:0 "寒漠"
  pc_antarctic_adj:0 "冰原"
  pc_aeolian_adj:0 "风蚀"
  pc_snow_adj:0 "雪域"
@@ -4529,7 +4529,7 @@
  origin_tooltip_pd_radiotrophic_mutants_effects:0 "-母星球为一颗§H$pc_irradiated$§!\n-所有人口获得类突变能力，在放射营养星球上更为强壮，但在其余星球上较为羸弱。\n-必须使用可种植之§H拉德花§!才能将星球改造为§H放射营养星球§!。"
  trait_radiotrophic_mutants:0 "放射营养突变体"
  trait_radiotrophic_mutants_desc:0 "这一种族经受过突变，被放射营养星球上的拉德花所增强了。"
- trait_radiotrophic_mutant_tooltip:0 "$TRAIT_PLANTOID_PHOTOTROPHIC_EFFECT$\n§Y死寂星球§!和§Y放射营养星球§!上的人口无需£energy£ §Y能量币§!维护费。\n§Y放射营养星球§!上的人口增长速度§G+10%§!\n§Y其它星球§!上的人口增长速度§R-10%§!"
+ trait_radiotrophic_mutant_tooltip:0 "$TRAIT_PLANTOID_PHOTOTROPHIC_EFFECT$\n§Y死寂星球§!和§Y放射营养星球§!上的人口不需要消耗£energy£ §Y能量币§!维护费。\n§Y放射营养星球§!上的人口生长速度§G+10%§!\n§Y其它类型星球§!上的人口生长速度§R-10%§!"
  origin_pd_ash_tectonic_drillers:0 "灰烬地壳钻工"
  origin_pd_ash_tectonic_drillers_desc:0 "这一文明在一颗灰烬星球上进化而来，需要在外星球上建造强力的地壳钻机，才能释放出其生存所需的奇异大气和岩浆混合物。"
  origin_tooltip_pd_ash_tectonic_drillers_effects:0 "-母星球为一颗§H$pc_ash$§!\n-获得在其它星球上建造强力§H地壳钻机§!的能力，此建筑能令星球变得更加宜居，最终将星球转化为灰烬星球。"
@@ -5279,7 +5279,7 @@
  START_SCREEN_PART_ONE_SCRAPYARD:0 "我们的家园——[GetHomeWorldName]——是一块废料。\n\n很明显，来自各个星系的人们把这里当作一处垃圾填满场，已经有证据显示了来自多个不同文明的废品。我们会是星球原主的后裔吗？还是说我们只是被遗忘的工人呢？\n\n自古以来，我们便从成堆的废料中搜刮出一点资源，以此生存，慢慢地从那些前人遗弃的废料中学习。"
  holding_pd_scrap_pile:0 "外星废料堆"
  holding_pd_scrap_pile_desc:0 "用于容纳宗主的废料的指定之地。对于当地的环境并不是尽善尽美，但是它提供了宗主的工业知识，当地人也可以从废料中回收到矿物和合金。"
- holding_scrap_pile_effect:0 "每座$holding_pd_scrap_pile$为宗主国首都提供：£alloys£ §Y$alloys$§!产出§G+5%§!"
+ holding_scrap_pile_effect:0 "每座$holding_pd_scrap_pile$为宗主国首都提供：£alloys£ §Y$alloys$§!产出§G+2.5%§!"
  holding_scrap_pile_build_modifier:0 "外星废料堆"
  holding_scrap_pile_build_modifier_desc:0 "我们的地产正在运送来自其他星球废料场的废品，可以提升该星球的合金产出。"
  pd_origin_init_scrapyard_NAME:0 "弃置之地星系"
@@ -5744,19 +5744,38 @@
  lifeseeded_pd.1.gaia_frozen:0 "寒冷盖亚"
  lifeseeded_pd.1.gaia_dry:0 "干燥盖亚"
  lifeseeded_pd.1.gaia_normal:0 "湿润盖亚"
- pd_rename_planet_01:0 "[solar_system.GetName] I"
- pd_rename_planet_02:0 "[solar_system.GetName] II"
- pd_rename_planet_03:0 "[solar_system.GetName] III"
- pd_rename_planet_04:0 "[solar_system.GetName] IV"
- pd_rename_planet_05:0 "[solar_system.GetName] V"
- pd_rename_planet_06:0 "[solar_system.GetName] VI"
- pd_rename_planet_07:0 "[solar_system.GetName] VII"
- pd_rename_planet_08:0 "[solar_system.GetName] VIII"
- pd_rename_planet_09:0 "[solar_system.GetName] IX"
- pd_rename_planet_10:0 "[solar_system.GetName] X"
- decision_flood_ringworld:0 "淹没环世界"
+ pd_rename_planet_01:0 "[solar_system.GetName]—Ⅰ"
+ pd_rename_planet_02:0 "[solar_system.GetName]—Ⅱ"
+ pd_rename_planet_03:0 "[solar_system.GetName]—Ⅲ"
+ pd_rename_planet_04:0 "[solar_system.GetName]—Ⅳ"
+ pd_rename_planet_05:0 "[solar_system.GetName]—Ⅴ"
+ pd_rename_planet_06:0 "[solar_system.GetName]—Ⅵ"
+ pd_rename_planet_07:0 "[solar_system.GetName]—Ⅶ"
+ pd_rename_planet_08:0 "[solar_system.GetName]—Ⅷ"
+ pd_rename_planet_09:0 "[solar_system.GetName]—Ⅸ"
+ pd_rename_planet_10:0 "[solar_system.GetName]—Ⅹ"
+ decision_flood_ringworld:0 "淹灌环世界"
  decision_flood_ringworld_desc:0 "环世界是我们理想的开发地——只要那里有充足的水。我们的冰开采网络能让我们自其它天体开采水冰，淹灌[This.GetName]，使此地变为完美的环世界水族馆。"
  decision_flood_ringworld_tooltip:0 "宜居性：§R-20%§!\n对§Y水生§!物种等同于§Y海洋§!星球。\n可以通过建有§Y$sm_ice_mining_station$§!的恒星基地从恒星系中采集水冰。"
  decision_unflood_ringworld:0 "环世界泄洪"
  decision_unflood_ringworld_desc:0 "环世界可以成为理想的居住地——只要那里没有那么多的水。尽管成本高昂，但我们可以将多余而泛滥的水排入太空中。"
- decision_unflood_ringworld_tooltip:0 "浆水排空以后，此处环世界会再度成为那些陆地种族的理想家园。"
+ decision_unflood_ringworld_tooltip:0 "将水排空以后，此处环世界会再度成为陆地种族的理想家园。"
+ TRAIT_DRY_SUPERHAB_PREFERENCE_EFFECT:0 "类地大行星宜居性（干燥）：$pd80$\n$DRY_PREFERENCE_EFFECT$"
+ pc_pd_orange_warform:0 "战形KB-14"
+ pc_pd_orange_warform_desc:0 "战形弑汝"
+ pc_pd_orange_warform_adj:0 "赛博"
+ mod_pc_pd_orange_warform_habitability:0 "战形KB-14宜居性"
+ trait_pc_pd_orange_warform_preference:0 "战形KB-14偏好"
+ trait_pc_pd_orange_warform_preference_desc:0 "$trait_pc_arctic_preference_desc$"
+ pc_pd_red_warform:0 "战形KB-14"
+ pc_pd_red_warform_desc:0 "战形弑汝"
+ pc_pd_red_warform_adj:0 "赛博"
+ mod_pc_pd_red_warform_habitability:0 "战形KB-14宜居性"
+ trait_pc_pd_red_warform_preference:0 "战形KB-14偏好"
+ trait_pc_pd_red_warform_preference_desc:0 "$trait_pc_arctic_preference_desc$"
+ pc_pd_blue_warform:0 "战形KB-14"
+ pc_pd_blue_warform_desc:0 "战形弑汝"
+ pc_pd_blue_warform_adj:0 "赛博"
+ mod_pc_pd_blue_warform_habitability:0 "战形KB-14宜居性"
+ trait_pc_pd_blue_warform_preference:0 "战形KB-14偏好"
+ trait_pc_pd_blue_warform_preference_desc:0 "$trait_pc_arctic_preference_desc$"
