--- a/planetary_diversity/localisation/spanish/planetarydiversity_l_spanish.yml
+++ b/planetary_diversity/localisation/spanish/planetarydiversity_l_spanish.yml
@@ -5922,7 +5922,7 @@ snowball_earth.11.name:0 "El Primer Deshielo"
  building_geothermal_lab:0 "Geothermal Engineering Department"
  building_geothermal_lab_desc:0 "The highly active geothermal activity and extreme differences in temperature means that engineers have to employ unique solutions to normal engineering problems."
  building_coral_resort:0 "Coral Forests Planetary Resort"
- building_coral_resort_desc:0 "The dry climate and colour coral forests make for some spectacular vacation destinations."
+ building_coral_resort_desc:0 "The dry climate and color coral forests make for some spectacular vacation destinations."
  building_coral_lab:0 "Coral Forest Research Posts"
  building_coral_lab_desc:0 "The unique land coral holds many secrets for biologists and engineerings alike."
  building_coral_guild:0 "Coral Artisans Guild"
@@ -6646,5 +6646,27 @@ snowball_earth.11.name:0 "El Primer Deshielo"
  decision_unflood_ringworld_desc:0 "This ringworld could be ideal for us - if only there wasn't so much water. While costly, we can drain much of the excess water into space."
  decision_unflood_ringworld_tooltip:0 "By draining the water, this ringworld will once again be ideal for races who reside above sea level."
 
+ ### April Update Cyberx Warform Unique World
+ pc_pd_orange_warform:0 "Warform KB-14"
+ pc_pd_orange_warform_desc:0 "Warform kill you" #TODO
+ pc_pd_orange_warform_adj:0 "cyber"
+ mod_pc_pd_orange_warform_habitability:0 "Warform KB-14 Habitability"
+ trait_pc_pd_orange_warform_preference:0 "Warform KB-14 Preference"
+ trait_pc_pd_orange_warform_preference_desc:0 "$trait_pc_arctic_preference_desc$"
+ pc_pd_red_warform:0 "Warform KB-14"
+ pc_pd_red_warform_desc:0 "Warform kill you" #TODO
+ pc_pd_red_warform_adj:0 "cyber"
+ mod_pc_pd_red_warform_habitability:0 "Warform KB-14 Habitability"
+ trait_pc_pd_red_warform_preference:0 "Warform KB-14 Preference"
+ trait_pc_pd_red_warform_preference_desc:0 "$trait_pc_arctic_preference_desc$"
+ pc_pd_blue_warform:0 "Warform KB-14"
+ pc_pd_blue_warform_desc:0 "Warform kill you" #TODO
+ pc_pd_blue_warform_adj:0 "cyber"
+ mod_pc_pd_blue_warform_habitability:0 "Warform KB-14 Habitability"
+ trait_pc_pd_blue_warform_preference:0 "Warform KB-14 Preference"
+ trait_pc_pd_blue_warform_preference_desc:0 "$trait_pc_arctic_preference_desc$"
+
+ #Odds & Ends
+ TRAIT_DRY_SUPERHAB_PREFERENCE_EFFECT:0 "Dry Superhabitable Habitability:$pd80$\n$DRY_PREFERENCE_EFFECT$"" 
  
 
