--- a/planetary_diversity_exotics/localisation/spanish/pd_uniqueexotichabs_l_spanish.yml
+++ b/planetary_diversity_exotics/localisation/spanish/pd_uniqueexotichabs_l_spanish.yml
@@ -90,7 +90,7 @@
  hycean_terraforming_candidate:0 "Hycean Terraforming Candidate"
  hycean_terraforming_candidate_desc:0 "Though barren and devoid of life, this gas giant has the building blocks for life. With the right technology, it could be terraformed into a Hycean world."
  pd_hycean_start_init_NAME:0 "Hycean World Start"
- pd_hycean_start_init_DESC:0 "Single large planet, two terraforming candidates are neighbours."
+ pd_hycean_start_init_DESC:0 "Single large planet, two terraforming candidates are Neighbors."
 
  #3.6 Nov Update
  sulfur_terraforming_candidate_for_others:0 "Sulfur Terraforming Candidate"
