--- a/planetary_diversity/localisation/russian/planetarydiversity_l_russian.yml
+++ b/planetary_diversity/localisation/russian/planetarydiversity_l_russian.yml
@@ -1196,16 +1196,16 @@ tech_synthwarform_desc:0 "Honoring our agreement, Unit 04 has designed for us sy
  mod_job_synth_assembler_per_pop_short:0 "\n§G+1§! £mod_job_synth_assembler_add£ per $VALUE$ £pop£"
 
  #Nearby Unique
- pd_floating_nearby_init_NAME:0 "Floating Neighbour"
- pd_floating_nearby_init_DESC:0 "One of your neighbour systems will have the unique Floating World, it will not spawn again in the game."
- pd_crystal_nearby_init_NAME:0 "Crystal Neighbour"
- pd_crystal_nearby_init_DESC:0 "One of your neighbour systems will have the unique Crystal World, it will not spawn again in the game."
- pd_graveyard_nearby_init_NAME:0 "Graveyard Neighbour"
- pd_graveyard_nearby_init_DESC:0 "One of your neighbour systems will have the unique Tiyanki Graveyard World, it will not spawn again in the game."
- pd_technoorganic_nearby_init_NAME:0 "Techno-Organic Neighbour"
- pd_technoorganic_nearby_init_DESC:0 "One of your neighbour systems will have the unique Techno-Organic World, it will not spawn again in the game."
- pd_archive_nearby_init_NAME:0 "Archive Neighbour"
- pd_archive_nearby_init_DESC:0 "One of your neighbour systems will have the unique Archive Habitat, it will not spawn again in the game."
+ pd_floating_nearby_init_NAME:0 "Floating Neighbor"
+ pd_floating_nearby_init_DESC:0 "One of your Neighbor systems will have the unique Floating World, it will not spawn again in the game."
+ pd_crystal_nearby_init_NAME:0 "Crystal Neighbor"
+ pd_crystal_nearby_init_DESC:0 "One of your Neighbor systems will have the unique Crystal World, it will not spawn again in the game."
+ pd_graveyard_nearby_init_NAME:0 "Graveyard Neighbor"
+ pd_graveyard_nearby_init_DESC:0 "One of your Neighbor systems will have the unique Tiyanki Graveyard World, it will not spawn again in the game."
+ pd_technoorganic_nearby_init_NAME:0 "Techno-Organic Neighbor"
+ pd_technoorganic_nearby_init_DESC:0 "One of your Neighbor systems will have the unique Techno-Organic World, it will not spawn again in the game."
+ pd_archive_nearby_init_NAME:0 "Archive Neighbor"
+ pd_archive_nearby_init_DESC:0 "One of your Neighbor systems will have the unique Archive Habitat, it will not spawn again in the game."
 
  #Megacorps Unique Starts
  civic_mega_crystal_world:0 "Crystal Home"
@@ -1416,7 +1416,7 @@ tech_synthwarform_desc:0 "Honoring our agreement, Unit 04 has designed for us sy
  d_pdsandworms:0 "Sandworms"
  d_pdsandworms_desc:0 "Colossal worm-like creatures that live in the dunes of this world. They attack people and machinary in their territory."
  pddune.10.name:0 "Something Shifts in the Sand"
- pddune.10.desc:0 "Our colonial scouts on [Root.GetName] have stumbled upon something extraordinary in the southern dune sea. Finding some odd coloured dunes they did some testing that tested positive for Zro. This would go against everything we know about Zro as it has only been found in voidbound deposits. Further scouting has found significant deposits in the dunes, once the infrastructure is built we could begin mining operations immediately."
+ pddune.10.desc:0 "Our colonial scouts on [Root.GetName] have stumbled upon something extraordinary in the southern dune sea. Finding some odd colored dunes they did some testing that tested positive for Zro. This would go against everything we know about Zro as it has only been found in voidbound deposits. Further scouting has found significant deposits in the dunes, once the infrastructure is built we could begin mining operations immediately."
  pddune.10.a:0 "Whoever controls the Zro, controls the universe."
  pddune.20.name:0 "Wormsign"
  pddune.20.desc:0 "A report has come in from [Root.GetName] that a colossal worm-like creature emerged from the sands and destroyed a Zro harvester, with only a few of the crew making it out alive. Our Xenobiologists believe that these creatures might be connected to the creation of the Zro and that killing them would have a negative effect on our production. The worms pose a considerable risk to the colony and much of the planet will have to left unusable to accommodate for them."
@@ -2069,7 +2069,7 @@ tech_synthwarform_desc:0 "Honoring our agreement, Unit 04 has designed for us sy
  pdcomposer:0 "Composed"
  pdcomposer_desc:0 "While birth rates are consistent with our species, the unexplained longevity on this world means people live longer more productive lives."
  pdshroud.23.name:0 "Pull the Strand"
- pdshroud.23.desc:0 "The hidden chamber in the §YTemples of Strands§! is open and inside is a thick web of different colour ropes coming out from every wall, the floor and ceiling. We think it might be some kind of puzzle, or perhaps a trap. How should be continue?"
+ pdshroud.23.desc:0 "The hidden chamber in the §YTemples of Strands§! is open and inside is a thick web of different color ropes coming out from every wall, the floor and ceiling. We think it might be some kind of puzzle, or perhaps a trap. How should be continue?"
  pdshroud.23.a:0 "Pull the Red rope."
  pdshroud.23.b:0 "Pull the Green rope."
  pdshroud.23.c:0 "Pull the Orange rope."
@@ -2357,8 +2357,8 @@ tech_synthwarform_desc:0 "Honoring our agreement, Unit 04 has designed for us sy
  pdtechnoorganic.47.hive.desc:0 "All the machine said in its defense was 'I understand' and put up no fight against the drones sent to shut it down. The synth animals all slowly powered down and became inert. We are studying the remains and we have recycled the bodies of the synth animals."
 
  #Eco-City Nearby
- pd_eco_nearby_init_NAME:0 "Eco-City Neighbour"
- pd_eco_nearby_init_DESC:0 "One of your neighbour systems will have an abandoned Eco-Arcology, it will not spawn again in the game."
+ pd_eco_nearby_init_NAME:0 "Eco-City Neighbor"
+ pd_eco_nearby_init_DESC:0 "One of your Neighbor systems will have an abandoned Eco-Arcology, it will not spawn again in the game."
 
  ###Wet Swamp
  pc_wetswamp:0 "Swamp World"
@@ -3196,12 +3196,12 @@ tech_synthwarform_desc:0 "Honoring our agreement, Unit 04 has designed for us sy
  pc_tepid:0 "Tepid World"
  pc_tepid_desc:0 "Rocky world with a nitrogen-oxygen atmosphere. Active and stable hydrosphere with great land masses that are separated by oceans. Having almost no axis tilt, this world's ideal growing conditions has allowed for the evolution of many types of photosynthetic processes." 
  pc_tepid_tile:0 "Tepid Terrain"
- pc_tepid_tile_desc:0 "Colourful forests and plains."
+ pc_tepid_tile_desc:0 "colorful forests and plains."
  trait_pc_tepid_preference:0 "Tepid Preference"
  trait_pc_tepid_preference_desc:1 "$trait_pc_arctic_preference_desc$"
  pc_tepid_habitability:0 "Tepid Habitability"
  mod_pc_tepid_habitability:0 "Tepid Habitability"
- START_SCREEN_PART_ONE_TEPID:0 "In the eons since the first primitive [GetSpeciesName] communities appeared near the colourful forests of [GetHomeWorldName], our civilization has spread and prospered."
+ START_SCREEN_PART_ONE_TEPID:0 "In the eons since the first primitive [GetSpeciesName] communities appeared near the colorful forests of [GetHomeWorldName], our civilization has spread and prospered."
  TRAIT_TEPID_PREFERENCE_EFFECT:0 "Tepid Habitability:$pd80$\nRetinal Habitability:$pd80$\nContinental Habitability:$pd80$\nForest Habitability:$pd80$\nLake Habitability:$pd80$\n$WET_PREFERENCE_EFFECT$"
 
  #Coral Origin / Event
@@ -4420,7 +4420,7 @@ tech_synthwarform_desc:0 "Honoring our agreement, Unit 04 has designed for us sy
  decision_snowball_wasteland_3:0 "Nanite-Enhanced Soil Reclamation"
  decision_snowball_wasteland_3_desc:0 "By introducing microscopic soil enhanced with nanites it would allow us to conduct farming operations in otherwise inhospitable regions of the planet."
 snowball_earth.11.name:0 "The First Thaw"
- snowball_earth.11.desc:0 "We have completed the first step of the long restoration process, and the fruits of our labours are already beginning to show. Surface temperatures are beginning to steadily rise, with average temperatures projected to increase by several degrees. The next step will be to reinvigorate the planet's tectonic and geothermal activity, once we've developed the appropriate technology."
+ snowball_earth.11.desc:0 "We have completed the first step of the long restoration process, and the fruits of our labors are already beginning to show. Surface temperatures are beginning to steadily rise, with average temperatures projected to increase by several degrees. The next step will be to reinvigorate the planet's tectonic and geothermal activity, once we've developed the appropriate technology."
  snowball_earth.12.name:0 "Lifeblood of the Planet"
  snowball_earth.12.desc:0 "Stage two of our homeworld's restoration project has successfully concluded. With the resonators complete, we are now able to energize and control the seismic activity of our planet. For the first time in memory, our people have woken up to a gentle heat and the sound of rolling waves. While most of the planet is still frozen, the equator is now free of ice and once again livable. The next and final stage will be to restore the planet's soil nutrients back to pre-Ice-Age levels."
  snowball_earth.13.name:0 "Paradise Found"
@@ -4660,8 +4660,8 @@ snowball_earth.11.name:0 "The First Thaw"
  decision_shroud_crucible_desc:0 "By introducing Zro to the furnace system we should be able to improve the planet's efficiency, although we will need a source of Zro to keep it running well."
  decision_clean_crucible_tooltip:0 "The old Zro residue will be removed from this world."
  decision_shroud_crucible_tooltip:0 "Zro will be re-introduced into the furnace system of this world."
- pd_crucible_nearby_init_NAME:0 "Crucible Neighbour"
- pd_crucible_nearby_init_DESC:0 "One of your neighbour systems will have the unique planet The Crucible, it will not spawn again in the game."
+ pd_crucible_nearby_init_NAME:0 "Crucible Neighbor"
+ pd_crucible_nearby_init_DESC:0 "One of your Neighbor systems will have the unique planet The Crucible, it will not spawn again in the game."
  tech_crucible_upgrade_custom:0 "Crucible Upgrade"
  tech_crucible_upgrade_custom_desc:0 "Further study of the Crucible has shown that it was designed to be infused with Zro, which was the cause of the residue on the planet. We should be able to either remove the current residue or infuse it with Zro once again."
  origin_crucible_world:0 "From The Ashes of the Rusnads"
@@ -5276,7 +5276,7 @@ snowball_earth.11.name:0 "The First Thaw"
  building_pd_tectonic_drills_2:0 "Tectonic Drill - Final Stage"
  building_pd_tectonic_drills_2_desc:0 "Terraforms the planet into a §YAsh World§! on completion."
  pdexotic.10.name:0 "Ash Perfection"
- pdexotic.10.desc:0 "Through years of hard labour, our tectonic drilling project on §Y[Root.GetName]§! has come to fruition.\n\nFrom this day, §Y[Root.GetName]§! will be considered a true home for our species."
+ pdexotic.10.desc:0 "Through years of hard labor, our tectonic drilling project on §Y[Root.GetName]§! has come to fruition.\n\nFrom this day, §Y[Root.GetName]§! will be considered a true home for our species."
  pdexotic.10.a:0 "A volcanic paradise for us."
  decision_pd_tectonic_drilling_planetside:0 "Tectonic Fissuring"
  decision_pd_tectonic_drilling_planetside_desc:0 "This initial tectonic cracking will release the gasses needed for us to colonize this world and then build deeper mining equipment to release the planet's magma."
@@ -5924,7 +5924,7 @@ snowball_earth.11.name:0 "The First Thaw"
  building_geothermal_lab:0 "Geothermal Engineering Department"
  building_geothermal_lab_desc:0 "The highly active geothermal activity and extreme differences in temperature means that engineers have to employ unique solutions to normal engineering problems."
  building_coral_resort:0 "Coral Forests Planetary Resort"
- building_coral_resort_desc:0 "The dry climate and colour coral forests make for some spectacular vacation destinations."
+ building_coral_resort_desc:0 "The dry climate and color coral forests make for some spectacular vacation destinations."
  building_coral_lab:0 "Coral Forest Research Posts"
  building_coral_lab_desc:0 "The unique land coral holds many secrets for biologists and engineerings alike."
  building_coral_guild:0 "Coral Artisans Guild"
@@ -6647,6 +6647,29 @@ snowball_earth.11.name:0 "The First Thaw"
  decision_unflood_ringworld:0 "Unflood Ringworld"
  decision_unflood_ringworld_desc:0 "This ringworld could be ideal for us - if only there wasn't so much water. While costly, we can drain much of the excess water into space."
  decision_unflood_ringworld_tooltip:0 "By draining the water, this ringworld will once again be ideal for races who reside above sea level."
+
+ ### April Update Cyberx Warform Unique World
+ pc_pd_orange_warform:0 "Warform KB-14"
+ pc_pd_orange_warform_desc:0 "Warform kill you" #TODO
+ pc_pd_orange_warform_adj:0 "cyber"
+ mod_pc_pd_orange_warform_habitability:0 "Warform KB-14 Habitability"
+ trait_pc_pd_orange_warform_preference:0 "Warform KB-14 Preference"
+ trait_pc_pd_orange_warform_preference_desc:0 "$trait_pc_arctic_preference_desc$"
+ pc_pd_red_warform:0 "Warform KB-14"
+ pc_pd_red_warform_desc:0 "Warform kill you" #TODO
+ pc_pd_red_warform_adj:0 "cyber"
+ mod_pc_pd_red_warform_habitability:0 "Warform KB-14 Habitability"
+ trait_pc_pd_red_warform_preference:0 "Warform KB-14 Preference"
+ trait_pc_pd_red_warform_preference_desc:0 "$trait_pc_arctic_preference_desc$"
+ pc_pd_blue_warform:0 "Warform KB-14"
+ pc_pd_blue_warform_desc:0 "Warform kill you" #TODO
+ pc_pd_blue_warform_adj:0 "cyber"
+ mod_pc_pd_blue_warform_habitability:0 "Warform KB-14 Habitability"
+ trait_pc_pd_blue_warform_preference:0 "Warform KB-14 Preference"
+ trait_pc_pd_blue_warform_preference_desc:0 "$trait_pc_arctic_preference_desc$"
+
+ #Odds & Ends
+ TRAIT_DRY_SUPERHAB_PREFERENCE_EFFECT:0 "Dry Superhabitable Habitability:$pd80$\n$DRY_PREFERENCE_EFFECT$"" 
 
  
 
