--- a/planetary_diversity_exotics/localisation/russian/pd_exotics_l_russian.yml
+++ b/planetary_diversity_exotics/localisation/russian/pd_exotics_l_russian.yml
@@ -69,7 +69,7 @@
  decision_expand_hycean_sea:0 "Expand Planetary Sea"
  decision_expand_hycean_sea_desc:0 "The hycean sea is our home - and home can never be big enough. Our ice mining networks enable us to harvest ice from other celestial bodies and gradually release it into [This.GetName]'s oceans, expanding the habitable areas on the planet."
  pd_hycean_start_init_NAME:0 "Hycean World Start"
- pd_hycean_start_init_DESC:0 "Single large planet, two terraforming candidates are neighbours."
+ pd_hycean_start_init_DESC:0 "Single large planet, two terraforming candidates are Neighbors."
 
  #Gas Dwarf
  pc_dwarf_gas_giant:0 "Gas Dwarf"
