--- a/planetary_diversity/localisation/english/planetarydiversity_l_english.yml
+++ b/planetary_diversity/localisation/english/planetarydiversity_l_english.yml
@@ -555,7 +555,7 @@
 
  ###Superhabitable World
  pc_superhabitable:0 "Wet Superhabitable World"
- pc_superhabitable_desc:0 "A rocky world with a nitrogen-oxygen atmosphere. This super-terrestrial planet retained much of its gas while forming, therefore, has a denser atmosphere with an average temperature of around 25 degrees Celsius. This has also had the effect of decreasing ocean basin size which encourages marine life. Plant and animal life thrive on this world and it's condition is suited for life to evolve."
+ pc_superhabitable_desc:0 "A rocky world with a nitrogen-oxygen atmosphere with a shallow ocean basin. This super-terrestrial has a denser atmosphere with an average temperature of around 25 degrees Celsius. While its heavy gravity is a struggle for aliens, its rich, warm condition is well suited for life to evolve on it."
  pc_superhabitable_tile:0 "Wet Superhabitable Terrain"
  pc_superhabitable_tile_desc:0 "Warm lush jungles and large shallow seas teaming with life."
  mod_pc_superhabitable_habitability:0 "Wet Superhabitable Habitability"
@@ -2700,7 +2700,7 @@
  building_storm_lab:0 "Weather Mitigation Array"
  building_storm_lab_desc:0 "This series of specialized weather arrays along the coast helps lower the severity of incoming storms. Stationed researchers also conduct stress tests on new materials in the extreme weather conditions."
  pc_storm:0 "Storm World"
- pc_storm_desc:0 "Cold, wet, rocky world with a nitrogen-oxygen atmosphere. The majority of the planet's land masses are found at either pole, separated by a massive single ocean which generates powerful storms year-round. While technically habitable, these land masses can only support a few hardy plants and animals; the majority of the planet's life can be found under the surface of the water."
+ pc_storm_desc:0 "A cold, rocky world with a nitrogen-oxygen atmosphere.  The planet's land masses are found at either pole, separated by a massive ocean which generates powerful storms year-round. Due to the extreme conditions, most of the planet's life is under the ocean's surface."
  mod_pc_storm_habitability:0 "Storm Habitability"
  trait_pc_storm_preference:0 "Storm Preference"
  trait_pc_storm_preference_desc:1 "$trait_pc_arctic_preference_desc$"
