--- a/planetary_diversity/localisation/english/planetarydiversity_l_english.yml
+++ b/planetary_diversity/localisation/english/planetarydiversity_l_english.yml
@@ -6524,25 +6524,42 @@ snowball_earth.11.name:0 "The First Thaw"
  decision_unflood_ringworld_desc:0 "This ringworld could be ideal for us - if only there wasn't so much water. While costly, we can drain much of the excess water into space."
  decision_unflood_ringworld_tooltip:0 "By draining the water, this ringworld will once again be ideal for races who reside above sea level."
 
- ### April Update Cyberx Warform Unique World
- pc_pd_orange_warform:0 "Warform KB-14"
+ ### April Update Cyberx MWF Unique World
+ pc_pd_orange_warform:0 "MWF-14"
  pc_pd_orange_warform_desc:0 "Warform kill you" #TODO
  pc_pd_orange_warform_adj:0 "cyber"
- mod_pc_pd_orange_warform_habitability:0 "Warform KB-14 Habitability"
- trait_pc_pd_orange_warform_preference:0 "Warform KB-14 Preference"
+ mod_pc_pd_orange_warform_habitability:0 "MWF-14 Habitability"
+ trait_pc_pd_orange_warform_preference:0 "MWF-14 Preference"
  trait_pc_pd_orange_warform_preference_desc:0 "$trait_pc_arctic_preference_desc$"
- pc_pd_red_warform:0 "Warform KB-14"
+ pc_pd_red_warform:0 "MWF-14"
  pc_pd_red_warform_desc:0 "Warform kill you" #TODO
  pc_pd_red_warform_adj:0 "cyber"
- mod_pc_pd_red_warform_habitability:0 "Warform KB-14 Habitability"
- trait_pc_pd_red_warform_preference:0 "Warform KB-14 Preference"
+ mod_pc_pd_red_warform_habitability:0 "MWF-14 Habitability"
+ trait_pc_pd_red_warform_preference:0 "MWF-14 Preference"
  trait_pc_pd_red_warform_preference_desc:0 "$trait_pc_arctic_preference_desc$"
- pc_pd_blue_warform:0 "Warform KB-14"
+ pc_pd_blue_warform:0 "MWF-14"
  pc_pd_blue_warform_desc:0 "Warform kill you" #TODO
  pc_pd_blue_warform_adj:0 "cyber"
- mod_pc_pd_blue_warform_habitability:0 "Warform KB-14 Habitability"
- trait_pc_pd_blue_warform_preference:0 "Warform KB-14 Preference"
+ mod_pc_pd_blue_warform_habitability:0 "MWF-14 Habitability"
+ trait_pc_pd_blue_warform_preference:0 "MWF-14 Preference"
  trait_pc_pd_blue_warform_preference_desc:0 "$trait_pc_arctic_preference_desc$"
 
  #Odds & Ends
  TRAIT_DRY_SUPERHAB_PREFERENCE_EFFECT:0 "Dry Superhabitable Habitability:$pd80$\n$DRY_PREFERENCE_EFFECT$"" 
+
+ #The rest of the Warform
+ district_warform_housing:0 "Unit Storage District"
+ district_warform_housing_desc:0 "Originally designed as storage space to hold warforms, it has been converted to suit our needs."
+ district_warform_housing_plural:0 "Unit Storage Districts"
+ district_warform_industrial:0 "Warform Factory District"
+ district_warform_industrial_desc:0 "This is where warforms were built."
+ district_warform_industrial_plural:0 "Warform Factory Districts"
+ district_warform_energy:0 "Energy Core District"
+ district_warform_energy_desc:0 "By tapping directly into the energy core we can produce much energy."
+ district_warform_energy_plural:0 "Energy Core Districts"
+ district_warform_science:0 "Organic Research District"
+ district_warform_science_desc:0 "The machine creaters did experiemnts on organics here, we can use."
+ district_warform_science_plural:0 "Organic Research Districts"
+ district_warform_cultural:0 "Cultural Database District"
+ district_warform_cultural_desc:0 "The machine creaters of this station catagoled the culture"
+ district_warform_cultural_plural:0 "Cultural Database Districts"
