--- a/planetary_diversity/localisation/english/planetarydiversity_l_english.yml
+++ b/planetary_diversity/localisation/english/planetarydiversity_l_english.yml
@@ -6548,18 +6548,25 @@ snowball_earth.11.name:0 "The First Thaw"
  TRAIT_DRY_SUPERHAB_PREFERENCE_EFFECT:0 "Dry Superhabitable Habitability:$pd80$\n$DRY_PREFERENCE_EFFECT$"" 
 
  #The rest of the Warform
- district_warform_housing:0 "Unit Storage District"
- district_warform_housing_desc:0 "Originally designed as storage space to hold warforms, it has been converted to suit our needs."
- district_warform_housing_plural:0 "Unit Storage Districts"
- district_warform_industrial:0 "Warform Factory District"
- district_warform_industrial_desc:0 "This is where warforms were built."
- district_warform_industrial_plural:0 "Warform Factory Districts"
- district_warform_energy:0 "Energy Core District"
- district_warform_energy_desc:0 "By tapping directly into the energy core we can produce much energy."
- district_warform_energy_plural:0 "Energy Core Districts"
- district_warform_science:0 "Organic Research District"
- district_warform_science_desc:0 "The machine creaters did experiemnts on organics here, we can use."
- district_warform_science_plural:0 "Organic Research Districts"
- district_warform_cultural:0 "Cultural Database District"
- district_warform_cultural_desc:0 "The machine creaters of this station catagoled the culture"
- district_warform_cultural_plural:0 "Cultural Database Districts"
+ district_pd_warform_housing:0 "Unit Storage District"
+ district_pd_warform_housing_desc:0 "Originally designed as storage space to hold warforms, it has been converted to suit our needs."
+ district_pd_warform_housing_plural:0 "Unit Storage Districts"
+ district_pd_warform_industrial:0 "Warform Factory District"
+ district_pd_warform_industrial_desc:0 "This is where warforms were built."
+ district_pd_warform_industrial_plural:0 "Warform Factory Districts"
+ district_pd_warform_energy:0 "Energy Core District"
+ district_pd_warform_energy_desc:0 "By tapping directly into the energy core we can produce much energy."
+ district_pd_warform_energy_plural:0 "Energy Core Districts"
+ district_pd_warform_science:0 "Organic Research District"
+ district_pd_warform_science_desc:0 "The machine creaters did experiemnts on organics here, we can use."
+ district_pd_warform_science_plural:0 "Organic Research Districts"
+ district_pd_warform_cultural:0 "Cultural Database District"
+ district_pd_warform_cultural_desc:0 "The machine creaters of this station catagoled the culture"
+ district_pd_warform_cultural_plural:0 "Cultural Database Districts"
+ #Deposits
+ d_pd_warform_power_core:0 "Power Core"
+ d_pd_warform_power_core_desc:0 "This mysterous power core once powered a powerful jump drive, the warform factory and all it's operations. No where near it's orevious power levels, it still produces a considerable amount of power."
+ d_pd_warform_factory:0 "Unit Construction Zone"
+ d_pd_warform_factory_desc:0 "Orginally set up to pump out warforms at an alarming rate."
+ d_pd_warform_research:0 "Organic Testing Labratory"
+ d_pd_warform_research_desc:0 "Extreme exploratory research was done on organics in these labs."
