--- a/planetary_diversity/localisation/english/planetarydiversity_l_english.yml
+++ b/planetary_diversity/localisation/english/planetarydiversity_l_english.yml
@@ -6548,25 +6548,58 @@ snowball_earth.11.name:0 "The First Thaw"
  TRAIT_DRY_SUPERHAB_PREFERENCE_EFFECT:0 "Dry Superhabitable Habitability:$pd80$\n$DRY_PREFERENCE_EFFECT$"" 
 
  #The rest of the Warform
- district_pd_warform_housing:0 "Unit Storage District"
- district_pd_warform_housing_desc:0 "Originally designed as storage space to hold warforms, it has been converted to suit our needs."
- district_pd_warform_housing_plural:0 "Unit Storage Districts"
- district_pd_warform_industrial:0 "Warform Factory District"
- district_pd_warform_industrial_desc:0 "This is where warforms were built."
- district_pd_warform_industrial_plural:0 "Warform Factory Districts"
- district_pd_warform_energy:0 "Energy Core District"
- district_pd_warform_energy_desc:0 "By tapping directly into the energy core we can produce much energy."
- district_pd_warform_energy_plural:0 "Energy Core Districts"
- district_pd_warform_science:0 "Organic Research District"
- district_pd_warform_science_desc:0 "The machine creaters did experiemnts on organics here, we can use."
- district_pd_warform_science_plural:0 "Organic Research Districts"
- district_pd_warform_cultural:0 "Cultural Database District"
- district_pd_warform_cultural_desc:0 "The machine creaters of this station catagoled the culture"
- district_pd_warform_cultural_plural:0 "Cultural Database Districts"
+ #Districts
+ district_pd_warform_housing: "Unit Storage District"
+ district_pd_warform_housing_desc: "Originally designed as storage space to hold warforms, it has been converted to suit our needs."
+ district_pd_warform_housing_plural: "Unit Storage Districts"
+ district_pd_warform_industrial: "Warform Factory District"
+ district_pd_warform_industrial_desc: "This is where warforms were built."
+ district_pd_warform_industrial_plural: "Warform Factory Districts"
+ district_pd_warform_energy: "Energy Core District"
+ district_pd_warform_energy_desc: "By tapping directly into the energy core we can produce much energy."
+ district_pd_warform_energy_plural: "Energy Core Districts"
+ district_pd_warform_science: "Organic Research District"
+ district_pd_warform_science_desc: "The machine creaters did experiemnts on organics here, we can use."
+ district_pd_warform_science_plural: "Organic Research Districts"
+ district_pd_warform_cultural: "Cultural Database District"
+ district_pd_warform_cultural_desc: "The machine creaters of this station catagoled the culture"
+ district_pd_warform_cultural_plural: "Cultural Database Districts"
  #Deposits
- d_pd_warform_power_core:0 "Power Core"
- d_pd_warform_power_core_desc:0 "This mysterous power core once powered a powerful jump drive, the warform factory and all it's operations. No where near it's orevious power levels, it still produces a considerable amount of power."
- d_pd_warform_factory:0 "Unit Construction Zone"
- d_pd_warform_factory_desc:0 "Orginally set up to pump out warforms at an alarming rate."
- d_pd_warform_research:0 "Organic Testing Labratory"
- d_pd_warform_research_desc:0 "Extreme exploratory research was done on organics in these labs."
+ d_pd_warform_power_core: "Power Core"
+ d_pd_warform_power_core_desc: "This mysterous power core once powered a powerful jump drive, the warform factory and all it's operations. No where near it's orevious power levels, it still produces a considerable amount of power."
+ d_pd_warform_factory: "Unit Construction Zone"
+ d_pd_warform_factory_desc: "Orginally set up to pump out warforms at an alarming rate."
+ d_pd_warform_research: "Organic Testing Labratory"
+ d_pd_warform_research_desc: "Extreme exploratory research was done on organics in these labs."
+ #Events
+ pdwarform.10.name: "Battle Wreckage"
+ pdwarform.10.desc: "As [Root.GetName] entered the [Root.GetStarName] they discovered considerable battle debris from two groups and a planet destroyed by nuclear bombardment. In orbit, a space station sits silently watching the wrecked world. Several smaller automated ships have been broadcasting not to approach 'MWF-014' or face extermination."
+ pdwarform.10.a: "I've got a bad feeling about this."
+ pdwarform.20.name: "Battlestation"
+ pdwarform.20.desc: "The scan revealed that [From.GetName] station was originally a mobile war factory responsible for destroying the space-faring organic species that originally inhabited this system. While its engines are beyond restoration, most systems are repairable if we can set up a permanent colony on the surface."
+ pdwarform.20.a: "Amazing."
+ pdwarform.300.name:0 "Warform Factory Colony"
+ pdwarform.300.desc:0 "Now that our colony is set up, we can begin the serious project of repairing it and setting it up to our needs."
+ pdwarform.300.a:0 "Begin the reconstruction."
+ #Situation
+ pd_warform_situation:0 "Warform Factory Repair"
+ pd_warform_situation_desc:0 "Repairing such a enormous station will take time and resources, but the outcome will be well worth the effort."
+ pd_warform_situation_type:0 "Warform Factory Repair"
+ pd_warform_situation_completion_tooltip:0 "The Warform Factory will be fully repaired and under our control."
+ approach_pd_warform_colonization_team:0 "Local Teams Only"
+ approach_pd_warform_extra_support:0 "Send Supplies"
+ stage_housing: "Unit Storage"
+ stage_housing_desc: "Orginally designed to house compact warforms, we will need to rework these districts to suit our needs."
+ stage_power: "Power Core"
+ stage_power_desc: "This core once powered state-of-the art jump drives, which are no longer operative. No longer repairable it can be adapted for energy collection."
+ stage_industrial: "Warform Factory"
+ stage_industrial_desc: "These advanced factory districts were set up to exclusivly build warforms, but with some effort we could adapt them to more conventional needs."
+ stage_research: "Organic Research Labratories"
+ stage_research_desc: "Extreme research was directed at organic-cybrog experimentation, we will have to choose how to recreate them."
+ stage_final: "Final Repairs"
+ stage_final_desc: "The left over areas have considerable potential, the machines that created this mobile station seemed to have unfinished plans for these areas."
+ #Situation Events
+ pdwarform.305.name:0 "Storage District Repair"
+ pdwarform.305.desc:0 "The unit storage is now completely recreated to suit our needs/n/n/The next set will to be tackle the power core."
+ pdwarform.305.a:0 "Excellent"
+ pdwarform.305.a.tooltip:0 "The unit storage district is now suited to our needs."
