--- a/planetary_diversity/localisation/english/planetarydiversity_l_english.yml
+++ b/planetary_diversity/localisation/english/planetarydiversity_l_english.yml
@@ -6600,6 +6600,6 @@ snowball_earth.11.name:0 "The First Thaw"
  stage_final_desc: "The left over areas have considerable potential, the machines that created this mobile station seemed to have unfinished plans for these areas."
  #Situation Events
  pdwarform.305.name:0 "Storage District Repair"
- pdwarform.305.desc:0 "The unit storage is now completely recreated to suit our needs/n/n/The next set will to be tackle the power core."
- pdwarform.305.a:0 "Excellent"
- pdwarform.305.a.tooltip:0 "The unit storage district is now suited to our needs."
+ pdwarform.305.desc:0 "The unit storage is now completely recreated to suit our needs.\n\nThe next step will to be tackle the power core."
+ pdwarform.305.a:0 "Excellent."
+ pdwarform.305.a.tooltip:0 "The unit storage district will now be able to house us well."
